<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fregment.profile.LanguageFragment">


    <ImageView
        android:id="@+id/back_iv"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:padding="6dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_vector_back"
        app:layout_constraintBottom_toBottomOf="@id/title_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/title_tv"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/zen_antique_regular"
        android:gravity="start"
        android:paddingVertical="10dp"
        android:text="@string/language"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_tv"
        app:layout_constraintWidth_percent="0.88">

        <RadioButton
            android:id="@+id/english_rb"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/language_checkbox_selector"
            android:button="@null"
            android:checked="true"
            android:paddingStart="20dp"
            android:text="@string/english"
            android:textColor="@color/topic_text_color" />

        <RadioButton
            android:id="@+id/turkish_rb"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/language_checkbox_selector"
            android:button="@null"
            android:paddingStart="20dp"
            android:text="@string/turkish"
            android:textColor="@color/topic_text_color"
            tools:ignore="RtlSymmetry" />

        <RadioButton
            android:id="@+id/german_rb"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/language_checkbox_selector"
            android:button="@null"
            android:paddingStart="20dp"
            android:text="@string/german"
            android:textColor="@color/topic_text_color"
            tools:ignore="RtlSymmetry" />

        <RadioButton
            android:id="@+id/spanish_rb"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/language_checkbox_selector"
            android:button="@null"
            android:paddingStart="20dp"
            android:text="@string/spanish"
            android:textColor="@color/topic_text_color"
            tools:ignore="RtlSymmetry" />

        <RadioButton
            android:id="@+id/russian_rb"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/language_checkbox_selector"
            android:button="@null"
            android:paddingStart="20dp"
            android:text="@string/russian"
            android:textColor="@color/topic_text_color"
            tools:ignore="RtlSymmetry" />
        <RadioButton
            android:id="@+id/china_rb"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/language_checkbox_selector"
            android:button="@null"
            android:paddingStart="20dp"
            android:text="@string/china"
            android:textColor="@color/topic_text_color"
            tools:ignore="RtlSymmetry" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>