<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    tools:context=".ui.fregment.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/zen_antique_regular"
            android:gravity="start"
            android:paddingVertical="10dp"
            android:text="@string/browse"
            android:textColor="@color/text_large_color"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05"
            app:layout_constraintWidth_percent="0.88" />


        <TextView
            android:id="@+id/desc_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/zen_antique_regular"
            android:gravity="start"
            android:text="@string/discover"
            android:textColor="@color/light_blue"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_tv"
            app:layout_constraintWidth_percent="0.88" />

        <androidx.cardview.widget.CardView
            android:id="@+id/search_card"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            app:cardBackgroundColor="@color/very_light_gray"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/desc_tv"
            app:layout_constraintWidth_percent="0.88">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:src="@drawable/ic_search"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/search_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/zen_antique_regular"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="6dp"
                    android:text="@string/search"
                    android:textColor="@color/light_blue"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/mic_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:src="@drawable/ic_microphone"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/search_card"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp"
            app:tabMode="scrollable"
            android:background="@color/transparent"
            app:tabPaddingEnd="6dp"
            app:tabPaddingStart="20dp"
            app:tabTextColor="@color/black" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/horizontal_rv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:minHeight="200dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tab_layout" />


        <ProgressBar
            android:id="@+id/progress_bar_hrv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/horizontal_rv"
            app:layout_constraintEnd_toEndOf="@id/horizontal_rv"
            app:layout_constraintStart_toStartOf="@id/horizontal_rv"
            app:layout_constraintTop_toTopOf="@+id/horizontal_rv" />

        <LinearLayout
            android:id="@+id/recommend_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontal_rv"
            app:layout_constraintWidth_percent="0.88">

            <TextView
                android:id="@+id/recommend_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone"
                android:paddingVertical="6dp"
                android:text="@string/recommended_for_you"
                android:textColor="@color/text_large_color"
                android:textSize="24sp"
                android:textStyle="bold" />

<!--
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="6dp"
                android:text="See All"
                android:textSize="18sp" />-->

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recommend_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:minHeight="100dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/recommend_layout" />

        <ProgressBar
            android:id="@+id/progress_bar_rrv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/recommend_rv"
            app:layout_constraintEnd_toEndOf="@id/recommend_rv"
            app:layout_constraintStart_toStartOf="@id/recommend_rv"
            app:layout_constraintTop_toTopOf="@+id/recommend_rv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>